--- a/src/ui/Spinner.module.css
+++ b/src/ui/Spinner.module.css
@@ -1,10 +1,13 @@
 .container {
   position: absolute;
-  top: 50%;
+  top: 0;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #f2f0eadc;
+  filter: blur(50%);
+  height: 100dvh;
 }
 
 .spinner {
