--- a/src/ui/Spinner.module.css
+++ b/src/ui/Spinner.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   background-color: #f2f0eadc;
   filter: blur(50%);
-  height: 100dvh;
+  height: 100vh;
 }
 
 .spinner {
